fix: overflow: hidden;

--- a/client/src/components/notes/notes.css
+++ b/client/src/components/notes/notes.css
@@ -31,7 +31,7 @@
 .notes-list-item-text {
     word-wrap: break-word;
     max-height: calc(19px*4);
-    overflow-block: hidden;
+    overflow: hidden;
 }
 
 
